feat: more updates

--- a/apps/website/src/pages/components/accordion.mdx
+++ b/apps/website/src/pages/components/accordion.mdx
@@ -1,1 +1,47 @@
+import { Accordion, AccordionContent, AccordionItem, AccordionTrigger } from '@edge-ui/react';
+
 # Accordion
+
+### Preview
+
+<div className="border border-primary p-3 mb-3 rounded-md">
+    <Accordion type="single" collapsible className="w-full">
+        <AccordionItem value="item-1">
+            <AccordionTrigger>Test item 1</AccordionTrigger>
+            <AccordionContent>Test item 1 value here.</AccordionContent>
+        </AccordionItem>
+        <AccordionItem value="item-2">
+            <AccordionTrigger>Test item 2</AccordionTrigger>
+            <AccordionContent>Test item 2 value here.</AccordionContent>
+        </AccordionItem>
+        <AccordionItem value="item-3">
+            <AccordionTrigger>Test item 3</AccordionTrigger>
+            <AccordionContent>Test item 3 value here.</AccordionContent>
+        </AccordionItem>
+    </Accordion>
+</div>
+
+## Example
+
+```jsx
+import { Accordion, AccordionContent, AccordionItem, AccordionTrigger } from '@edge-ui/react';
+
+export function AccordionExample() {
+    return (
+        <Accordion type="single" collapsible className="w-full">
+            <AccordionItem value="item-1">
+                <AccordionTrigger>Test item 1</AccordionTrigger>
+                <AccordionContent>Test item 1 value here.</AccordionContent>
+            </AccordionItem>
+            <AccordionItem value="item-2">
+                <AccordionTrigger>Test item 2</AccordionTrigger>
+                <AccordionContent>Test item 2 value here.</AccordionContent>
+            </AccordionItem>
+            <AccordionItem value="item-3">
+                <AccordionTrigger>Test item 3</AccordionTrigger>
+                <AccordionContent>Test item 3 value here.</AccordionContent>
+            </AccordionItem>
+        </Accordion>
+    );
+}
+```
