feat: hooks doc

--- a/apps/website/src/pages/docs/hooks/use-boolean.mdx
+++ b/apps/website/src/pages/docs/hooks/use-boolean.mdx
@@ -1,1 +1,34 @@
 # useBoolean
+
+This hook can be used to manage boolean state.
+
+### Signature
+
+```ts
+interface BooleanAction {
+    state: boolean;
+    setState: React.Dispatch<React.SetStateAction<boolean>>;
+    toggle: () => void;
+    setTrue: () => void;
+    setFalse: () => void;
+    isTrue: boolean;
+    isFalse: boolean;
+}
+
+function useBoolean(defaultValue?: boolean): BooleanAction;
+```
+
+```jsx
+import { useBoolean } from '@edge-ui/react';
+
+export function Component() {
+    const { state, toggle } = useBoolean(false);
+
+    return (
+        <>
+            <h1>Current Value: {state}</h1>
+            <button onClick={toggle}>Toggle</button>
+        </h1>
+    );
+}
+```
