--- a/apps/website/src/pages/docs/hooks/use-clipboard.mdx
+++ b/apps/website/src/pages/docs/hooks/use-clipboard.mdx
@@ -1,1 +1,28 @@
 # useClipboard
+
+This hook can be used to manage clipboard content.
+
+### Signature
+
+```ts
+type CopyTextContentCallback = (newContent: string) => Promise<boolean>;
+type ClipboardTextContent = string | null;
+
+function useClipboard(breakpoint: Breakpoint): [ClipboardTextContent, CopyTextContentCallback];
+```
+
+```jsx
+import { useClipboard } from '@edge-ui/react';
+
+export function Component() {
+    const [content, copyContent] = useClipboard();
+
+    return (
+        <>
+            <button onClick={() => {
+                copyContent('Content to copy');
+            }}>Copy</button>
+        </>
+    );
+}
+```
