feat: lots of important docs

--- a/apps/website/src/pages/docs/components/avatar.mdx
+++ b/apps/website/src/pages/docs/components/avatar.mdx
@@ -1,1 +1,24 @@
+import { AvatarExample } from '@/components/docs/avatar';
+
 # Avatar
+
+Displays an avatar component.
+
+<AvatarExample />
+
+<br />
+
+### Example
+
+```jsx
+import { Avatar, AvatarFallback, AvatarImage } from '@edge-ui/react';
+
+export function AvatarExample() {
+    return (
+        <Avatar>
+            <AvatarImage src="https://github.com/neplextech.png" alt="@neplextech" />
+            <AvatarFallback>NT</AvatarFallback>
+        </Avatar>
+    );
+}
+```
