--- a/apps/website/src/pages/docs/components/button.mdx
+++ b/apps/website/src/pages/docs/components/button.mdx
@@ -4,7 +4,7 @@ import { Buttons } from '@/components/docs/buttons';
 
 Displays a button component.
 
-<br/>
+<br />
 
 ### Variants
 
@@ -12,7 +12,7 @@ Displays a button component.
     <Buttons />
 </div>
 
-# Example
+### Example
 
 ```jsx
 import { Button } from '@edge-ui/react';
@@ -21,17 +21,17 @@ export default function Component() {
     return (
         <>
             <div>
-                <Button variant='default'>Default</Button>
-                <Button variant='destructive'>Destructive</Button>
-                <Button variant='outline'>Outline</Button>
-                <Button variant='secondary'>Secondary</Button>
-                <Button variant='ghost'>Ghost</Button>
-                <Button variant='link'>Link</Button>
+                <Button variant="default">Default</Button>
+                <Button variant="destructive">Destructive</Button>
+                <Button variant="outline">Outline</Button>
+                <Button variant="secondary">Secondary</Button>
+                <Button variant="ghost">Ghost</Button>
+                <Button variant="link">Link</Button>
             </div>
             <div>
-                <Button size='default'>Default</Button>
-                <Button size='sm'>Small</Button>
-                <Button size='lg'>Large</Button>
+                <Button size="default">Default</Button>
+                <Button size="sm">Small</Button>
+                <Button size="lg">Large</Button>
             </div>
         </>
     );
