--- a/apps/website/src/pages/docs/hooks/use-breakpoint.mdx
+++ b/apps/website/src/pages/docs/hooks/use-breakpoint.mdx
@@ -10,6 +10,8 @@ type Breakpoint = `${'min' | 'max'}-${'width' | 'height'}: ${number}${'px' | 're
 function useBreakpoint(breakpoint: Breakpoint): boolean;
 ```
 
+### Example
+
 ```jsx
 import { useBreakpoint } from '@edge-ui/react';
 
@@ -19,7 +21,7 @@ export function Component() {
     return (
         <>
             <h1>Breakpoint matches: {matches}</h1>
-        </h1>
+        </>
     );
 }
 ```
