feat: more documentation

--- a/apps/website/src/pages/docs/components/checkbox.mdx
+++ b/apps/website/src/pages/docs/components/checkbox.mdx
@@ -1,10 +1,10 @@
-import { CheckboxExample } from '@/components/docs/inputs';
+import { CheckboxExample } from '@/components/docs/inputs'
 
-# Label
+# Checkbox
 
-Displays a label component.
+Displays a checkbox component.
 
-<CheckboxExample />
+<CheckboxExample/>
 
 <br />
 
@@ -13,7 +13,7 @@ Displays a label component.
 ```jsx
 import { Checkbox, Label } from '@edge-ui/react';
 
-export function LabelExample() {
+export function CheckboxExample() {
     return (
         <div className="border p-3 rounded-md flex justify-center items-center">
             <div className="flex items-center space-x-2">
