--- a/apps/website/src/pages/docs/components/scroll-area.mdx
+++ b/apps/website/src/pages/docs/components/scroll-area.mdx
@@ -1,11 +1,35 @@
+import { ScrollAreaExample } from '@/components/docs/scrollArea';
+
 # Scroll Area
 
 This component creates a scrollable area.
 
-<br/>
+<ScrollAreaExample />
+
+<br />
 
 # Example
 
 ```jsx
-//
+import { ScrollArea, Separator } from '@edge-ui/react';
+
+const tags = Array.from({ length: 70 }).map((_, i, a) => `v0.1.0-dev.${a.length - i}`);
+
+export function ScrollAreaExample() {
+    return (
+        <ScrollArea className="h-72 w-48 rounded-md border">
+            <div className="p-4">
+                <h4 className="mb-4 text-sm font-medium leading-none">Release Tags</h4>
+                {tags.map((tag) => (
+                    <>
+                        <div className="text-sm" key={tag}>
+                            {tag}
+                        </div>
+                        <Separator className="my-2" />
+                    </>
+                ))}
+            </div>
+        </ScrollArea>
+    );
+}
 ```
