--- a/apps/website/src/pages/docs/components/popover.mdx
+++ b/apps/website/src/pages/docs/components/popover.mdx
@@ -1,1 +1,24 @@
+import { PopoverExample } from '@/components/docs/popover';
+
 # Popover
+
+This component displays a popover.
+
+<PopoverExample />
+
+<br />
+
+# Example
+
+```jsx
+import { Popover, PopoverContent, PopoverTrigger } from '@edge-ui/react';
+
+export function PopoverExample() {
+    return (
+        <Popover>
+            <PopoverTrigger>Open</PopoverTrigger>
+            <PopoverContent>Place content for the popover here.</PopoverContent>
+        </Popover>
+    );
+}
+```
