feat: add title to components docs

--- a/apps/website/src/pages/docs/components/accordion.mdx
+++ b/apps/website/src/pages/docs/components/accordion.mdx
@@ -1,4 +1,9 @@
 import { AccordionExample } from '@/components/docs/accordion';
+import Head from 'next/head';
+
+<Head>
+  <title>Accordion | EdgeUI</title>
+</Head>
 
 # Accordion
 
