--- a/apps/website/src/pages/docs/components/alert-dialog.mdx
+++ b/apps/website/src/pages/docs/components/alert-dialog.mdx
@@ -1,4 +1,9 @@
 import { AlertDialogExample } from '@/components/docs/alert';
+import Head from 'next/head';
+
+<Head>
+  <title>Alert Dialog | EdgeUI</title>
+</Head>
 
 # Alert Dialog
 
