--- a/apps/website/src/pages/docs/components/alert.mdx
+++ b/apps/website/src/pages/docs/components/alert.mdx
@@ -1,4 +1,9 @@
 import { AlertExample } from '@/components/docs/alert';
+import Head from 'next/head';
+
+<Head>
+  <title>Alert | EdgeUI</title>
+</Head>
 
 # Alert
 
