--- a/apps/website/src/pages/docs/components/avatar.mdx
+++ b/apps/website/src/pages/docs/components/avatar.mdx
@@ -1,4 +1,9 @@
 import { AvatarExample } from '@/components/docs/avatar';
+import Head from 'next/head';
+
+<Head>
+  <title>Avatar | EdgeUI</title>
+</Head>
 
 # Avatar
 
