--- a/apps/website/src/pages/docs/components/badge.mdx
+++ b/apps/website/src/pages/docs/components/badge.mdx
@@ -1,4 +1,9 @@
 import { Badges } from '@/components/docs/badges';
+import Head from 'next/head';
+
+<Head>
+  <title>Badge | EdgeUI</title>
+</Head>
 
 # Badge
 
