--- a/apps/website/src/pages/docs/components/button.mdx
+++ b/apps/website/src/pages/docs/components/button.mdx
@@ -1,4 +1,9 @@
 import { Buttons } from '@/components/docs/buttons';
+import Head from 'next/head';
+
+<Head>
+  <title>Button | EdgeUI</title>
+</Head>
 
 # Button
 
