--- a/apps/website/src/pages/docs/components/calendar.mdx
+++ b/apps/website/src/pages/docs/components/calendar.mdx
@@ -1,4 +1,9 @@
 import { CalendarExample } from '@/components/docs/calendar';
+import Head from 'next/head';
+
+<Head>
+  <title>Calendar | EdgeUI</title>
+</Head>
 
 # Calendar
 
