--- a/apps/website/src/pages/docs/components/card.mdx
+++ b/apps/website/src/pages/docs/components/card.mdx
@@ -1,4 +1,9 @@
 import { CardExample } from '@/components/docs/card';
+import Head from 'next/head';
+
+<Head>
+  <title>Card | EdgeUI</title>
+</Head>
 
 # Card
 
