--- a/apps/website/src/pages/docs/components/code.mdx
+++ b/apps/website/src/pages/docs/components/code.mdx
@@ -1,4 +1,9 @@
 import { CodeBlockExample } from '@/components/docs/code';
+import Head from 'next/head';
+
+<Head>
+  <title>Code | EdgeUI</title>
+</Head>
 
 # Code
 
