--- a/apps/website/src/pages/docs/components/command-dialog.mdx
+++ b/apps/website/src/pages/docs/components/command-dialog.mdx
@@ -1,4 +1,9 @@
 import { CommandDialogExample } from '@/components/docs/commandDialog'
+import Head from 'next/head';
+
+<Head>
+  <title>Command Dialog | EdgeUI</title>
+</Head>
 
 # Command Dialog
 
