--- a/apps/website/src/pages/docs/components/context-menu.mdx
+++ b/apps/website/src/pages/docs/components/context-menu.mdx
@@ -1,4 +1,9 @@
 import { ContextMenuExample } from '@/components/docs/contextMenu';
+import Head from 'next/head';
+
+<Head>
+  <title>Context Menu | EdgeUI</title>
+</Head>
 
 # Context Menu
 
