--- a/apps/website/src/pages/docs/components/dialog.mdx
+++ b/apps/website/src/pages/docs/components/dialog.mdx
@@ -1,4 +1,9 @@
 import { DialogExample } from '@/components/docs/dialog';
+import Head from 'next/head';
+
+<Head>
+  <title>Dialog | EdgeUI</title>
+</Head>
 
 # Dialog
 
