--- a/apps/website/src/pages/docs/components/dropdown-menu.mdx
+++ b/apps/website/src/pages/docs/components/dropdown-menu.mdx
@@ -1,4 +1,9 @@
 import { DropdownMenuExample } from '@/components/docs/dropdownMenu';
+import Head from 'next/head';
+
+<Head>
+  <title>Dropdown Menu | EdgeUI</title>
+</Head>
 
 # Dropdown Menu
 
