--- a/apps/website/src/pages/docs/components/hover-card.mdx
+++ b/apps/website/src/pages/docs/components/hover-card.mdx
@@ -1,4 +1,9 @@
 import { HoverCardExample } from '@/components/docs/hoverCard';
+import Head from 'next/head';
+
+<Head>
+  <title>Hover Card | EdgeUI</title>
+</Head>
 
 # Hover Card
 
