--- a/apps/website/src/pages/docs/components/input.mdx
+++ b/apps/website/src/pages/docs/components/input.mdx
@@ -1,4 +1,9 @@
 import { InputExample } from '@/components/docs/inputs';
+import Head from 'next/head';
+
+<Head>
+  <title>Input | EdgeUI</title>
+</Head>
 
 # Input
 
