--- a/apps/website/src/pages/docs/components/label.mdx
+++ b/apps/website/src/pages/docs/components/label.mdx
@@ -1,4 +1,9 @@
 import { CheckboxExample } from '@/components/docs/inputs';
+import Head from 'next/head';
+
+<Head>
+  <title>Label | EdgeUI</title>
+</Head>
 
 # Label
 
