--- a/apps/website/src/pages/docs/components/layout.mdx
+++ b/apps/website/src/pages/docs/components/layout.mdx
@@ -1,3 +1,10 @@
+import Head from 'next/head';
+
+<Head>
+  <title>Layout | EdgeUI</title>
+</Head>
+
+
 # Layout
 
 This component provides a consistent and reusable structure for organizing the visual and functional elements of a web page or application.
