--- a/apps/website/src/pages/docs/components/loader.mdx
+++ b/apps/website/src/pages/docs/components/loader.mdx
@@ -1,4 +1,9 @@
 import { LoaderExample } from '@/components/docs/loader';
+import Head from 'next/head';
+
+<Head>
+  <title>Loader | EdgeUI</title>
+</Head>
 
 # Loader
 
