--- a/apps/website/src/pages/docs/components/menubar.mdx
+++ b/apps/website/src/pages/docs/components/menubar.mdx
@@ -1,4 +1,9 @@
 import { MenubarExample } from '@/components/docs/menubar';
+import Head from 'next/head';
+
+<Head>
+  <title>Menubar | EdgeUI</title>
+</Head>
 
 # Menubar
 
