--- a/apps/website/src/pages/docs/components/navigation.mdx
+++ b/apps/website/src/pages/docs/components/navigation.mdx
@@ -1,4 +1,9 @@
 import { NavigationExample } from '@/components/docs/navigation';
+import Head from 'next/head';
+
+<Head>
+  <title>Navigation | EdgeUI</title>
+</Head>
 
 # Navigation
 
