--- a/apps/website/src/pages/docs/components/popover.mdx
+++ b/apps/website/src/pages/docs/components/popover.mdx
@@ -1,4 +1,9 @@
 import { PopoverExample } from '@/components/docs/popover';
+import Head from 'next/head';
+
+<Head>
+  <title>Popover | EdgeUI</title>
+</Head>
 
 # Popover
 
