--- a/apps/website/src/pages/docs/components/progress.mdx
+++ b/apps/website/src/pages/docs/components/progress.mdx
@@ -1,4 +1,9 @@
 import { ProgressExample } from '@/components/docs/progress';
+import Head from 'next/head';
+
+<Head>
+  <title>Progress | EdgeUI</title>
+</Head>
 
 # Progress
 
