--- a/apps/website/src/pages/docs/components/scroll-area.mdx
+++ b/apps/website/src/pages/docs/components/scroll-area.mdx
@@ -1,4 +1,9 @@
 import { ScrollAreaExample } from '@/components/docs/scrollArea';
+import Head from 'next/head';
+
+<Head>
+  <title>Scroll Area | EdgeUI</title>
+</Head>
 
 # Scroll Area
 
