--- a/apps/website/src/pages/docs/components/select.mdx
+++ b/apps/website/src/pages/docs/components/select.mdx
@@ -1,4 +1,9 @@
 import { SelectExample } from '@/components/docs/inputs';
+import Head from 'next/head';
+
+<Head>
+  <title>Select | EdgeUI</title>
+</Head>
 
 # Select
 
