--- a/apps/website/src/pages/docs/components/separator.mdx
+++ b/apps/website/src/pages/docs/components/separator.mdx
@@ -1,4 +1,9 @@
 import { SeparatorExample } from '@/components/docs/separator';
+import Head from 'next/head';
+
+<Head>
+  <title>Separator | EdgeUI</title>
+</Head>
 
 # Separator
 
