--- a/apps/website/src/pages/docs/components/sheet.mdx
+++ b/apps/website/src/pages/docs/components/sheet.mdx
@@ -1,4 +1,9 @@
 import { SheetExample } from '@/components/docs/sheet';
+import Head from 'next/head';
+
+<Head>
+  <title>Sheet | EdgeUI</title>
+</Head>
 
 # Sheet
 
