--- a/apps/website/src/pages/docs/components/skeleton.mdx
+++ b/apps/website/src/pages/docs/components/skeleton.mdx
@@ -1,4 +1,9 @@
 import { SkeletonExample } from '@/components/docs/skeleton';
+import Head from 'next/head';
+
+<Head>
+  <title>Skeleton | EdgeUI</title>
+</Head>
 
 # Skeleton
 
