--- a/apps/website/src/pages/docs/components/slider.mdx
+++ b/apps/website/src/pages/docs/components/slider.mdx
@@ -1,4 +1,9 @@
 import { SliderExample } from '@/components/docs/slider';
+import Head from 'next/head';
+
+<Head>
+  <title>Slider | EdgeUI</title>
+</Head>
 
 # Slider
 
