--- a/apps/website/src/pages/docs/components/switch.mdx
+++ b/apps/website/src/pages/docs/components/switch.mdx
@@ -1,4 +1,9 @@
 import { SwitchExample } from '@/components/docs/inputs';
+import Head from 'next/head';
+
+<Head>
+  <title>Switch | EdgeUI</title>
+</Head>
 
 # Switch
 
