--- a/apps/website/src/pages/docs/components/tab.mdx
+++ b/apps/website/src/pages/docs/components/tab.mdx
@@ -1,4 +1,9 @@
 import { TabExample } from '@/components/docs/tab';
+import Head from 'next/head';
+
+<Head>
+  <title>Tab | EdgeUI</title>
+</Head>
 
 # Tab
 
