--- a/apps/website/src/pages/docs/components/table.mdx
+++ b/apps/website/src/pages/docs/components/table.mdx
@@ -1,4 +1,9 @@
 import { TableExample } from '@/components/docs/table';
+import Head from 'next/head';
+
+<Head>
+  <title>Table | EdgeUI</title>
+</Head>
 
 # Table
 
