--- a/apps/website/src/pages/docs/components/textarea.mdx
+++ b/apps/website/src/pages/docs/components/textarea.mdx
@@ -1,4 +1,9 @@
 import { TextareaExample } from '@/components/docs/inputs';
+import Head from 'next/head';
+
+<Head>
+  <title>Textarea | EdgeUI</title>
+</Head>
 
 # Textarea
 
