--- a/apps/website/src/pages/docs/components/toast.mdx
+++ b/apps/website/src/pages/docs/components/toast.mdx
@@ -1,4 +1,9 @@
 import { ToastExample } from '@/components/docs/toast';
+import Head from 'next/head';
+
+<Head>
+  <title>Toast | EdgeUI</title>
+</Head>
 
 # Toast
 
