--- a/apps/website/src/pages/docs/components/tooltip.mdx
+++ b/apps/website/src/pages/docs/components/tooltip.mdx
@@ -1,4 +1,9 @@
 import { TooltipExample } from '@/components/docs/tooltip';
+import Head from 'next/head';
+
+<Head>
+  <title>Tooltip | EdgeUI</title>
+</Head>
 
 # Tooltip
 
