--- a/apps/website/src/pages/docs/components/typography.mdx
+++ b/apps/website/src/pages/docs/components/typography.mdx
@@ -1,3 +1,10 @@
+import Head from 'next/head';
+
+<Head>
+  <title>Typography | EdgeUI</title>
+</Head>
+
+
 # Typography
 
 Provides typography utilities.
