--- a/apps/website/src/pages/docs/installation.mdx
+++ b/apps/website/src/pages/docs/installation.mdx
@@ -1,5 +1,10 @@
 import { Alert, AlertDescription, AlertTitle, Code } from '@edge-ui/react';
 import { AlertCircle } from 'lucide-react';
+import Head from 'next/head';
+
+<Head>
+  <title>Installation | EdgeUI</title>
+</Head>
 
 # Installation
 
