--- a/apps/website/src/pages/docs/introduction.mdx
+++ b/apps/website/src/pages/docs/introduction.mdx
@@ -1,5 +1,10 @@
 import { Alert, AlertDescription, AlertTitle } from '@edge-ui/react';
 import { Copyright } from 'lucide-react';
+import Head from 'next/head';
+
+<Head>
+  <title>Introduction | EdgeUI</title>
+</Head>
 
 # Introduction
 
