--- a/apps/website/src/pages/docs/components/checkbox.mdx
+++ b/apps/website/src/pages/docs/components/checkbox.mdx
@@ -1,4 +1,9 @@
 import { CheckboxExample } from '@/components/docs/inputs'
+import Head from 'next/head';
+
+<Head>
+  <title>Checkbox | EdgeUI</title>
+</Head>
 
 # Checkbox
 
