feat: add title to hooks docs

--- a/apps/website/src/pages/docs/hooks/use-boolean.mdx
+++ b/apps/website/src/pages/docs/hooks/use-boolean.mdx
@@ -1,3 +1,10 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useBoolean | EdgeUI</title>
+</Head>
+
+
 # useBoolean
 
 This hook can be used to manage boolean state. It is very similar to [useToggle](/docs/hooks/use-toggle) hook.
