--- a/apps/website/src/pages/docs/hooks/use-breakpoint.mdx
+++ b/apps/website/src/pages/docs/hooks/use-breakpoint.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useBreakpoint | EdgeUI</title>
+</Head>
+
 # useBreakpoint
 
 This hook can be used to verify the breakpoint using media query.
