--- a/apps/website/src/pages/docs/hooks/use-clipboard.mdx
+++ b/apps/website/src/pages/docs/hooks/use-clipboard.mdx
@@ -1,3 +1,10 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useClipboard | EdgeUI</title>
+</Head>
+
+
 # useClipboard
 
 This hook can be used to manage clipboard content.
