--- a/apps/website/src/pages/docs/hooks/use-hover.mdx
+++ b/apps/website/src/pages/docs/hooks/use-hover.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useHover | EdgeUI</title>
+</Head>
+
 # useHover
 
 This hook can be used to manage hovered state.
