--- a/apps/website/src/pages/docs/hooks/use-media-query.mdx
+++ b/apps/website/src/pages/docs/hooks/use-media-query.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useMediaQuery | EdgeUI</title>
+</Head>
+
 # useMediaQuery
 
 This hook can be used to handle media query.
