--- a/apps/website/src/pages/docs/hooks/use-toggle.mdx
+++ b/apps/website/src/pages/docs/hooks/use-toggle.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useToggle | EdgeUI</title>
+</Head>
+
 # useToggle
 
 This hook can be used to manage on/off state. It is very similar to [useBoolean](/docs/hooks/use-boolean) hook.
