--- a/apps/website/src/pages/docs/hooks/use-debounce.mdx
+++ b/apps/website/src/pages/docs/hooks/use-debounce.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useDebounce | EdgeUI</title>
+</Head>
+
 # useDebounce
 
 This hook can be used to content based on the provided delay.
