--- a/apps/website/src/pages/docs/hooks/use-image-load.mdx
+++ b/apps/website/src/pages/docs/hooks/use-image-load.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useImageLoad | EdgeUI</title>
+</Head>
+
 # useImageLoad
 
 This hook can be used to manage image load/error event.
