--- a/apps/website/src/pages/docs/hooks/use-intersection-observer.mdx
+++ b/apps/website/src/pages/docs/hooks/use-intersection-observer.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useIntersectionObserver | EdgeUI</title>
+</Head>
+
 # useIntersectionObserver
 
 This hook can be used to manage intersection observer.
