--- a/apps/website/src/pages/docs/hooks/use-theme.mdx
+++ b/apps/website/src/pages/docs/hooks/use-theme.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useTheme | EdgeUI</title>
+</Head>
+
 # useTheme
 
 This hook can be used to manage EdgeUI theme.
