--- a/apps/website/src/pages/docs/hooks/use-toast.mdx
+++ b/apps/website/src/pages/docs/hooks/use-toast.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useToast | EdgeUI</title>
+</Head>
+
 # useToast
 
 This hook can be used to manage toast alerts.
