--- a/apps/website/src/pages/docs/hooks/use-xeffect.mdx
+++ b/apps/website/src/pages/docs/hooks/use-xeffect.mdx
@@ -1,3 +1,9 @@
+import Head from 'next/head';
+
+<Head>
+  <title>useXEffect | EdgeUI</title>
+</Head>
+
 # useXEffect
 
 The signature of this hook is similar to `useEffect` but uses `useLayoutEffect` on the browser and `useEffect` on the server.
