fix: update discord invite in docs

--- a/apps/website/src/pages/docs/introduction.mdx
+++ b/apps/website/src/pages/docs/introduction.mdx
@@ -18,7 +18,7 @@ Additionally, its highly scalable components allow you to build responsive and f
 # Contact
 
 - [Issues](https://github.com/neplextech/edge-ui/issues/new)
-- [Discord Server](/discord)
+- [Discord Server](https://neplextech.com/discord)
 - We are happy to accept your pull requests {':)'}
 
 # Open Source
